--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -6599,6 +6599,12 @@ button.close {
 .top-header .header-blocks #block-menu-block-1 .menu-name-menu-social-menu ul li .introduction-title {
   display: none;
 }
+.top-header .header-blocks #block-menu-block-5 .introduction-image {
+  display: inline-block;
+}
+.top-header .header-blocks #block-menu-block-5 .introduction-title {
+  display: inline-block;
+}
 .top-header .header-blocks #block-search-form {
   margin-top: 7px;
   margin-bottom: 7px;
@@ -6685,10 +6691,13 @@ button.close {
 .menu-header #navbar .navbar-nav {
   width: 100%;
   display: table;
-  margin-top: 10px;
+  margin-top: 15px;
 }
 .menu-header #navbar .navbar-nav li.last.leaf a {
   border-right: none;
+}
+.menu-header #navbar .navbar-nav > li.first.leaf {
+  top: -3px;
 }
 .menu-header #navbar .navbar-nav li {
   float: initial;
@@ -6720,13 +6729,12 @@ button.close {
 .menu-header #navbar .navbar-nav li span {
   color: #ffffff;
   background-color: rgba(0, 0, 0, 0);
-  padding-top: 6px;
   padding-bottom: 0px;
 }
 .menu-header #navbar .navbar-nav li .dropdown-menu {
   background-color: #10b2e4;
   border: none;
-  top: 30px;
+  top: 25px;
   padding: 0px;
   padding-top: 10px;
   border-radius: 0px;
@@ -8133,6 +8141,215 @@ a.more-link:before {
 .page-eu-national-partners .view-id-countries .views-item-columns-container .views-field-country-content-count .field-content .country-content-count-label:last-child {
   border-left: 2px solid #58585a;
 }
+/*END COUNTRY LIST*/
+/* COUNTRY PROFILE
+********************************************************************/
+.page-country-profile .panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first {
+  background-color: #786586;
+  padding-top: 40px;
+  padding-bottom: 30px;
+}
+.page-country-profile .panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first .pane-taxonomy-term-field-flag {
+  display: inline-block;
+  margin-right: 20px;
+}
+.page-country-profile .panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first .pane-taxonomy-term-field-flag img {
+  max-height: 67px;
+}
+.page-country-profile .panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first .panel-separator {
+  display: none;
+}
+.page-country-profile .panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first .pane-taxonomy-term-name-field {
+  display: inline-block;
+}
+.page-country-profile .panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first .pane-taxonomy-term-name-field h1 {
+  color: #ffffff;
+}
+.page-country-profile .panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first .pane-taxonomy-term-country-content-count {
+  display: inline-block;
+  float: right;
+}
+.page-country-profile .panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first .pane-taxonomy-term-country-content-count .field-items .field-item {
+  display: table-cell;
+  text-align: center;
+  width: 25%;
+  border-left: 2px solid #ffffff;
+}
+.page-country-profile .panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first .pane-taxonomy-term-country-content-count .field-items .field-item .country-content-count-label label {
+  display: block;
+  color: #ffffff;
+  min-height: 30px;
+  line-height: 16px;
+  font-weight: normal;
+}
+.page-country-profile .panels-flexible-row-new-main-row-inside.panels-flexible-row-inside-first .pane-taxonomy-term-country-content-count .field-items .field-item .country-content-count-label span {
+  display: block;
+  color: #ffffff;
+  font-size: 3em;
+  line-height: 16px;
+  font-weight: bold;
+}
+#mini-panel-partner_in_country .panels-flexible-row-inside-first {
+  background-color: #ffffff;
+  border-bottom: 2px solid #786586;
+  padding-top: 10px;
+  margin-bottom: 10px;
+  padding-bottom: 30px;
+}
+#mini-panel-partner_in_country .panels-flexible-row-inside-first h2 {
+  margin-top: 0px;
+}
+#mini-panel-partner_in_country .partner-contact-container .pane-title,
+#mini-panel-partner_in_country .partner-social-container .pane-title,
+#mini-panel-partner_in_country .partner-colaborators-container .pane-title,
+#mini-panel-partner_in_country .partner-text2-container .pane-title {
+  color: #967ea7;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+#mini-panel-partner_in_country .partner-contact-container .field-name-field-country {
+  background-color: #ffffff;
+  display: block;
+  color: #58585a;
+  padding: 0px;
+  font-size: 1em;
+  font-weight: normal;
+  font-style: normal;
+  margin-top: 0em;
+  margin-right: 0px;
+  margin-bottom: 15px;
+}
+#mini-panel-partner_in_country .partner-colaborators-container .field-name-field-collaborator > div.field-items > div.field-item {
+  display: inline-block;
+  margin-right: 15px;
+}
+#quicktabs-container-view__country_partner_content__block,
+#quicktabs-container-view__country_partner_content__block_1 {
+  background-color: #dfd8e4;
+  padding-bottom: 30px;
+}
+#quicktabs-container-view__country_partner_content__block .quicktabs-tabpage .content-group-label,
+#quicktabs-container-view__country_partner_content__block_1 .quicktabs-tabpage .content-group-label {
+  color: #967ea7;
+  border-bottom: 2px solid #967ea7;
+  font-size: 2.2em;
+  padding-bottom: 15px;
+  font-family: 'Oswald';
+  margin-top: 30px;
+}
+#quicktabs-container-view__country_partner_content__block .quicktabs-tabpage .quicktabs-views-group,
+#quicktabs-container-view__country_partner_content__block_1 .quicktabs-tabpage .quicktabs-views-group {
+  border-bottom: 2px solid #967ea7;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+#quicktabs-container-view__country_partner_content__block .quicktabs-tabpage .quicktabs-views-group h3,
+#quicktabs-container-view__country_partner_content__block_1 .quicktabs-tabpage .quicktabs-views-group h3 {
+  font-size: 2.2em;
+  font-weight: bold;
+}
+#quicktabs-container-view__country_partner_content__block .quicktabs-tabpage .quicktabs-views-group .more-link,
+#quicktabs-container-view__country_partner_content__block_1 .quicktabs-tabpage .quicktabs-views-group .more-link {
+  text-align: left;
+}
+#quicktabs-container-view__country_partner_content__block .quicktabs-tabpage .quicktabs-views-group a.show-less,
+#quicktabs-container-view__country_partner_content__block_1 .quicktabs-tabpage .quicktabs-views-group a.show-less {
+  text-align: right !important;
+  width: 20px;
+  height: 12px;
+  float: right;
+  overflow: hidden;
+  font-style: normal;
+}
+#quicktabs-container-view__country_partner_content__block .quicktabs-tabpage .quicktabs-views-group a.show-less:before,
+#quicktabs-container-view__country_partner_content__block_1 .quicktabs-tabpage .quicktabs-views-group a.show-less:before {
+  content: "\e253";
+  font-family: "Glyphicons Halflings";
+  font-size: 1.2em;
+  line-height: 0;
+}
+#quicktabs-container-view__country_partner_content__block .quicktabs-tabpage .quicktabs-views-group .field-name-related-partners .node-partner,
+#quicktabs-container-view__country_partner_content__block_1 .quicktabs-tabpage .quicktabs-views-group .field-name-related-partners .node-partner {
+  background-color: #786586;
+  padding: 15px;
+  color: #ffffff;
+  margin-top: 20px;
+}
+#quicktabs-container-view__country_partner_content__block .quicktabs-tabpage .quicktabs-views-group .field-name-related-partners .node-partner h4 a,
+#quicktabs-container-view__country_partner_content__block_1 .quicktabs-tabpage .quicktabs-views-group .field-name-related-partners .node-partner h4 a {
+  font-size: 1.2em;
+  color: #ffffff;
+  margin-top: 0px;
+}
+#quicktabs-container-view__country_partner_content__block .quicktabs-tabpage .quicktabs-views-group .field-name-related-partners .node-partner .more-link,
+#quicktabs-container-view__country_partner_content__block_1 .quicktabs-tabpage .quicktabs-views-group .field-name-related-partners .node-partner .more-link {
+  color: #ffffff;
+  text-align: left;
+}
+#quicktabs-container-view__country_partner_content__block .quicktabs-tabpage .quicktabs-views-group .related-partners-2 > div,
+#quicktabs-container-view__country_partner_content__block_1 .quicktabs-tabpage .quicktabs-views-group .related-partners-2 > div {
+  display: table;
+  border-collapse: collapse;
+}
+#quicktabs-container-view__country_partner_content__block .quicktabs-tabpage .quicktabs-views-group .related-partners-2 > div > .even:first-child,
+#quicktabs-container-view__country_partner_content__block_1 .quicktabs-tabpage .quicktabs-views-group .related-partners-2 > div > .even:first-child,
+#quicktabs-container-view__country_partner_content__block .quicktabs-tabpage .quicktabs-views-group .related-partners-2 > div > .odd:first-child,
+#quicktabs-container-view__country_partner_content__block_1 .quicktabs-tabpage .quicktabs-views-group .related-partners-2 > div > .odd:first-child {
+  display: table-cell;
+}
+#quicktabs-container-view__country_partner_content__block .quicktabs-tabpage .quicktabs-views-group .related-partners-2 > div > .even:first-child,
+#quicktabs-container-view__country_partner_content__block_1 .quicktabs-tabpage .quicktabs-views-group .related-partners-2 > div > .even:first-child {
+  border-right: 10px solid #dfd8e4;
+}
+#quicktabs-container-view__country_partner_content__block .quicktabs-tabpage .quicktabs-views-group:last-child,
+#quicktabs-container-view__country_partner_content__block_1 .quicktabs-tabpage .quicktabs-views-group:last-child {
+  border-bottom: 0px solid #786586;
+}
+.quicktabs-tabs-container {
+  background-color: #786586;
+  color: #ffffff;
+}
+.quicktabs-tabs-container ul.quicktabs-tabs > li {
+  display: inline-block;
+  margin-right: 20px;
+  padding: 0px;
+}
+.quicktabs-tabs-container ul.quicktabs-tabs > li a {
+  padding: 15px;
+  color: #ffffff;
+  font-style: italic;
+  display: block;
+}
+.quicktabs-tabs-container ul.quicktabs-tabs > li a:hover {
+  background-color: rgba(255, 255, 255, 0.8);
+  color: #786586;
+}
+.quicktabs-tabs-container ul.quicktabs-tabs > li ul {
+  position: absolute;
+  color: #58585a;
+  background-color: #ffffff;
+  z-index: 100;
+  min-width: 123px;
+}
+.quicktabs-tabs-container ul.quicktabs-tabs > li ul li {
+  display: block;
+  padding: 10px 15px;
+}
+.quicktabs-tabs-container ul.quicktabs-tabs > li ul li:hover {
+  background-color: #786586;
+  color: #ffffff;
+}
+.quicktabs-tabs-container ul.quicktabs-tabs > li ul li a {
+  color: #58585a;
+  font-style: normal;
+  display: block;
+  padding: 10px 15px;
+}
+.quicktabs-tabs-container ul.quicktabs-tabs > li ul li a:hover {
+  background-color: #786586;
+  color: #ffffff;
+}
+/*END COUNTRY PROFILE*/
 /*PROMOTIONAL MATERIALS
 ********************************************************************/
 .page-promotional-resources .pane-node-body .field-type-text-with-summary {
