--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -6532,8 +6532,11 @@ button.close {
   margin: 0 auto;
 }
 .top-header .header-sitename a.sitename {
-  display: none;
+  display: block;
   text-align: center;
+  color: #003399;
+  font-size: 0.8em;
+  font-weight: bold;
 }
 .top-header .header-blocks {
   margin-top: 50px;
@@ -6644,11 +6647,10 @@ button.close {
 .top-header .header-blocks #block-menu-block-3 {
   display: inline-block;
 }
-.top-header .header-blocks #block-menu-block-3 .introduction-title {
-  background-color: #003399;
-  padding: 3px 10px 3px 10px;
-}
 .top-header .header-blocks #block-menu-block-3 .introduction-title a {
+  display: block;
+  background-color: #003399;
+  padding: 3px 12px 3px 12px;
   color: #ffffff;
 }
 .top-header .header-blocks #block-menu-block-3 .introduction-title a:before {
@@ -7179,6 +7181,42 @@ a.more-link:before {
 }
 #block-system-main .panels-flexible-region-new-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container .materials-content-wrapper {
   padding: 15px;
+  overflow: hidden;
+}
+#block-system-main .panels-flexible-region-new-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container .materials-content-wrapper .field-name-title-field {
+  min-height: 45px;
+}
+#block-system-main .panels-flexible-region-new-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container .field-name-related-partners .node-partner {
+  background-color: #786586;
+  padding: 15px;
+  color: #ffffff;
+  margin-top: 15px;
+}
+#block-system-main .panels-flexible-region-new-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container .field-name-related-partners .node-partner h4 a {
+  font-size: 0.9em;
+  color: #ffffff;
+  margin-top: 0px;
+}
+#block-system-main .panels-flexible-region-new-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container .field-name-related-partners .node-partner .more-link {
+  color: #ffffff;
+  text-align: left;
+}
+#block-system-main .panels-flexible-region-new-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container a.more-link {
+  text-align: left;
+}
+#block-system-main .panels-flexible-region-new-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container a.show-less {
+  text-align: right !important;
+  width: 20px;
+  height: 12px;
+  float: right;
+  overflow: hidden;
+  font-style: normal;
+}
+#block-system-main .panels-flexible-region-new-promotional_materials .pane-promotional-materials .view-promotional-materials .views-item-columns-container a.show-less:before {
+  content: "\e253";
+  font-family: "Glyphicons Halflings";
+  font-size: 1.2em;
+  line-height: 0;
 }
 #block-system-main .panels-flexible-row-new-16 {
   background-color: #dfd8e4;
@@ -8037,12 +8075,20 @@ a.more-link:before {
 }
 .node-news .field-name-field-summary a {
   color: #786586;
+  font-style: italic;
+}
+.node-news .field-name-field-summary a:hover {
+  text-decoration: underline !important;
 }
 .node-news .field-name-body {
   margin-bottom: 30px;
 }
 .node-news .field-name-body a {
   color: #786586;
+  font-style: italic;
+}
+.node-news .field-name-body a:hover {
+  text-decoration: underline !important;
 }
 .node-news .field-name-body .more-link {
   color: #10b2e4;
@@ -8314,6 +8360,9 @@ a.more-link:before {
   margin-right: 20px;
   padding: 0px;
 }
+.quicktabs-tabs-container ul.quicktabs-tabs > li:hover ul {
+  display: block !important;
+}
 .quicktabs-tabs-container ul.quicktabs-tabs > li a {
   padding: 15px;
   color: #ffffff;
@@ -8324,16 +8373,21 @@ a.more-link:before {
   background-color: rgba(255, 255, 255, 0.8);
   color: #786586;
 }
+.quicktabs-tabs-container ul.quicktabs-tabs > li a:hover ul {
+  display: block !important;
+}
 .quicktabs-tabs-container ul.quicktabs-tabs > li ul {
   position: absolute;
   color: #58585a;
   background-color: #ffffff;
   z-index: 100;
   min-width: 123px;
+  display: none;
 }
 .quicktabs-tabs-container ul.quicktabs-tabs > li ul li {
   display: block;
   padding: 10px 15px;
+  cursor: pointer;
 }
 .quicktabs-tabs-container ul.quicktabs-tabs > li ul li:hover {
   background-color: #786586;
@@ -8616,8 +8670,6 @@ a.more-link:before {
 }
 .page-sectorial-social-partners .quicktabs-tabs {
   background-color: #786586;
-  display: table;
-  width: 100%;
 }
 .page-sectorial-social-partners .quicktabs-tabs li {
   display: table-cell;
@@ -8633,7 +8685,7 @@ a.more-link:before {
 .page-sectorial-social-partners .quicktabs-tabpage .hwc-alphabet-container .hwc-char-link {
   margin: 0px 10px;
 }
-.page-sectorial-social-partners .quicktabs-tabpage div[id^="hwc-char-0"] {
+.page-sectorial-social-partners .quicktabs-tabpage div[id^="hwc-char-"] {
   color: #786586;
   font-family: "Oswald";
   font-size: 2.2em;
@@ -8815,4 +8867,141 @@ a.more-link:before {
 .site-footer .menu-block-2 .menu li {
   display: inline-block;
   margin-left: 10px;
+}
+@media only screen and (max-width: 1200px) {
+  /*HEADER
+***********************************************/
+  .top-header .header-logo {
+    margin-top: 62px;
+  }
+  .top-header .header-logo .logo img {
+    width: 213px;
+  }
+  .top-header .header-logo img.eu-logo {
+    width: 75px;
+  }
+  .menu-header #navbar .navbar-nav {
+    font-size: 0.9em;
+  }
+  .menu-header #navbar .navbar-nav li.first.leaf {
+    top: 0px;
+  }
+  .menu-header #navbar .navbar-nav li.first.leaf a {
+    top: -2px;
+  }
+  .menu-header #navbar .navbar-nav li.first.leaf a img {
+    height: 18px;
+  }
+  .menu-header #navbar .navbar-nav li .dropdown-menu {
+    top: 22px;
+    padding-top: 13px;
+  }
+  /*END HEADER*/
+  /*HOME
+********************************************/
+  /*END HOME*/
+}
+@media only screen and (max-width: 992px) {
+  /*HEADER
+***********************************************/
+  .top-header .header-logo {
+    margin-top: 40px;
+  }
+  .top-header .header-logo .logo img {
+    width: 213px;
+  }
+  .top-header .header-logo img.eu-logo {
+    width: 60px;
+    margin-left: 9px;
+    margin-top: 39px;
+  }
+  .top-header .header-sitename .oira-logo img {
+    width: 145px;
+  }
+  .top-header .region-header-block #block-text-resize-0 {
+    display: none;
+  }
+  .top-header .region-header-block #block-oira-blocks-oira-print-friendly {
+    display: none;
+  }
+  .top-header .region-header-block #block-menu-block-1 {
+    display: none;
+  }
+  .top-header .region-header-block #block-menu-block-5 {
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+  }
+  .top-header .region-header-block #block-menu-block-5 .introduction-image img {
+    width: 29px;
+  }
+  .top-header .region-header-block #block-menu-block-5 .introduction-title {
+    display: none;
+  }
+  .top-header .region-header-block #block-search-form {
+    position: absolute;
+    top: 0;
+    margin-top: 0px;
+  }
+  .top-header .region-header-block #block-search-form input {
+    display: none;
+    height: 29px !important;
+  }
+  .top-header .region-header-block #block-search-form button {
+    height: 29px;
+    width: 29px;
+  }
+  .top-header .region-header-block #block-menu-block-3 {
+    display: block;
+    clear: both;
+    margin-bottom: 15px;
+    margin-right: 30px;
+  }
+  .top-header .region-header-block #block-lang-dropdown-language {
+    margin-right: 30px;
+  }
+  .top-header .region-header-block #block-lang-dropdown-language #lang-dropdown-select-language {
+    width: 117px !important;
+  }
+  .navbar-header {
+    float: none;
+  }
+  .navbar-left,
+  .navbar-right {
+    float: none !important;
+  }
+  .navbar-toggle {
+    display: block;
+  }
+  .navbar-collapse {
+    border-top: 1px solid transparent;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
+  }
+  .navbar-fixed-top {
+    top: 0;
+    border-width: 0 0 1px;
+  }
+  .navbar-collapse.collapse {
+    display: none!important;
+  }
+  .navbar-nav {
+    float: none!important;
+    margin-top: 7.5px;
+  }
+  .navbar-nav > li {
+    float: none;
+  }
+  .navbar-nav > li > a {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .collapse.in {
+    display: block !important;
+  }
+  #navbar button.navbar-toggle {
+    float: left;
+  }
+  /*HOME
+****************************************************************/
+  /*END HOME*/
 }
