--- a/docroot/sites/all/themes/oira_frontend/less/header.less
+++ b/docroot/sites/all/themes/oira_frontend/less/header.less
@@ -21,9 +21,11 @@
 			}
 		}
 		a.sitename{
-			display: none;
+			display: block;
 			text-align: center;
-
+			color: @color-menu-icons;
+			font-size: 0.8em;
+			font-weight: bold;
 		}
 	}
 	.header-blocks{
@@ -152,9 +154,10 @@
 		#block-menu-block-3{
 			display: inline-block;
 			.introduction-title{				
-				background-color: @color-menu-icons;
-    			padding: 3px 10px 3px 10px;
 				a{
+					display: block;
+					background-color: @color-menu-icons;
+    				padding: 3px 12px 3px 12px;
 					color: @color-white;
 					&:before{
 						content: "\e033";
