--- a/docroot/sites/all/themes/oira_frontend/less/variables.less
+++ b/docroot/sites/all/themes/oira_frontend/less/variables.less
@@ -900,6 +900,7 @@
 @color-primary: #dfd8e4;
 @color-primary-dark: #786586;
 @color-menu: #10b2e4;
+@color-menu-hover: #37d0ff;
 @color-white: #FFFFFF;
  
 @color-menu-icons: #003399;
