--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
@@ -37,6 +37,7 @@
 			position: absolute;
 			bottom: 0px;
 			right: 0px;
+			margin-right: 15px;
 			.introduction-image{
 				img{
 					width: 29px;
@@ -50,6 +51,7 @@
 		    position: absolute;
     		top: 0;
     		margin-top: 0px;
+    		margin-right: 15px;
     		input{
     			display: none;
     			height: 29px !important;
@@ -63,10 +65,10 @@
 			display: block;
     		clear: both;
     		margin-bottom: 15px;
-    		margin-right: 30px;
+    		margin-right: 40px;
 		}
 		#block-lang-dropdown-language{
-			margin-right: 30px;
+			margin-right: 40px;
 			#lang-dropdown-select-language{
 				width: 117px !important;
 			}
@@ -113,6 +115,137 @@
 		float: left;
 	}
 }
+
+/*MENU
+**************************************************/
+.menu-header{
+	margin-top: 10px;
+    background-color: @color-menu;
+    font-family: @font-family-base-2;
+	#navbar{
+		margin-top: 0px;
+		margin-bottom: 0px;
+		background-color: rgba(0,0,0,0) !important;
+    	border: none;
+    	.navbar-collapse{
+    		border: none;
+    		width: 100%;
+    		padding-right: 0px;
+    		padding-left: 0px;
+    		padding-top: 15px;
+    		padding-bottom: 15px;
+    	}
+    	.navbar-toggle{
+    		border-color: @color-menu;
+    		&:focus{
+    			background-color: @color-menu-hover;
+    		}
+    		&:hover{
+    			background-color: @color-menu-hover;
+    		}
+    		.icon-bar{
+    			background-color: @color-white !important;
+    		}
+    	}
+    	.navbar-nav{
+    		width: 100%;
+    		margin-top: 15px;
+    		margin: 0px;
+    		font-size: 1em;
+    		li.last.leaf{
+    			a{
+    				border-right: none;
+    			}
+    		}
+    		&>li.first.leaf{
+				top:-3px;
+				text-align: center;
+    		}
+    		li{
+    			float: initial;
+    			display: block;
+    			//text-align: center;
+    			padding: 10px 0px;
+    			color: @color-white;
+    			text-align: left;
+    			border-bottom: 1px solid #37d0ff;
+    			border-right: none;
+    			&:last-child{
+    				border-right: none;
+    				border-bottom: none;
+    			}
+    			.dropdown-toggle{
+    				&:after{
+						content:"\e250";
+			    		font-family: "Glyphicons Halflings";
+			    		padding-left: 10px;
+					}
+    			}
+    			.down-arrow{
+    				&:after{
+						content:"\e252";
+			    		font-family: "Glyphicons Halflings";
+			    		padding-left: 10px;
+					}
+    			}
+				a{
+					padding: 0px;
+					padding-left: 0px;
+					padding-right: 0px;
+    				margin-right: 0px;
+				}
+				span{
+					padding-left: 0px;
+					padding-right: 0px;
+					padding-top: 2px;
+    				padding-bottom: 3px;
+					.caret{
+	    				display: none;
+	    			}
+				}
+    			a, span{
+    				color: @color-white;
+    				background-color: rgba(0,0,0,0);
+	    			//border-right: 2px solid @color-white;
+    				padding-bottom: 0px;
+    				display: block;
+    			}
+    			.dropdown-menu{
+    				background-color: @color-menu;
+    				border: none;
+    				padding: 0px;
+    				padding-top: 0px;
+   					border-radius: 0px;
+					display: block;
+					position: initial !important;
+					float: none;
+					box-shadow: 0 6px 12px rgba(0, 0, 0, 0);
+					margin-left: 20px;
+    				li{
+    					display: block !important;
+    					border-right: none;
+    					border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    					padding-top: 5px;
+    					display: block;
+    					padding-bottom: 5px;
+    					&:last-child{
+    						border: none;
+    					}
+    					&:hover{
+							background-color: darken(@color-see-more, 1);
+    					}
+    					a{
+    						border: none;
+    						padding: 0px;
+    						color: #05465a;
+    					}
+    				}
+    			}
+    		}
+    	}
+	}
+}
+/*END MENU*/
 
 /*HOME
 ****************************************************************/
